# flingoos-shared

./: .gitignore  SCHEMA_CHANGE_GUIDE.md  jest.config.js  package-lock.json  package.json
.github/workflows/: contract-canary.yml
python/flingoos_shared_models/: README.md  __init__.py  auth_claims.py  auth_token_response.py  bridge_command_request.py  bridge_command_response.py  bridge_models.py  device_proof_payload.py  device_proof_request.py  device_proof_response.py  error_envelope.py  firestore_workflow.py  forge_artifact.py  forge_counters.py  forge_job_response.py  forge_manifest.py  forge_trigger.py  index.py  job_progress.py  pyproject.toml  session_event.py  session_internal_state.py  session_models.py  session_start_response.py  session_status_response.py  session_stop_response.py  stage_execution.py  standard_error_response.py
python/flingoos_shared_models/flingoos_shared_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate-schemas.js
src/: edit-history.ts  examples.ts  index.ts  phase14-validation.js  project.ts  schemas.ts  session-translations.ts  types.ts  video-artifacts.ts
src/__tests__/: phase14-schemas.test.ts  usage-logging.test.ts
src/usage-logging/: README.md  constants.ts  create_new_ticket_instructor.md  dev_diary.md  index.ts  server.ts  types.ts
